syntax = "proto3";

package service;

service IdService {
  rpc Generate (GenerateReq) returns (GenerateRsp) {}
}

message GenerateReq {
	enum IdType {
		User = 0;
		Group = 1;
	 	UserMessage = 2;
		GroupMessage = 3;
	}
	IdType Type =1;
}

message GenerateRsp {
	int64  Id = 1;
}

